# llvm-projects

./: LICENSE  README.md
calc/: .clangd  CMakeLists.txt  build.sh
calc/src/: AST.h  CMakeLists.txt  Calc.cpp  CodeGen.cpp  CodeGen.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Sema.cpp  Sema.h
tinylang/: CMakeLists.txt  build.sh
tinylang/include/tinylang/AST/: AST.h
tinylang/include/tinylang/Basic/: Diagnostic.def  Diagnostic.h  LLVM.h  TokenKinds.def  TokenKinds.h
tinylang/include/tinylang/CodeGen/: CGModule.h  CodeGenerator.h
tinylang/include/tinylang/Lexer/: Lexer.h  Token.h
tinylang/include/tinylang/Parser/: Parser.h
tinylang/include/tinylang/Sema/: Scope.h  Sema.h
tinylang/lib/: CMakeLists.txt
tinylang/lib/Basic/: Diagnostic.cpp  TokenKinds.cpp
tinylang/lib/CodeGen/: CodeGenerator.cpp
tinylang/lib/Lexer/: Lexer.cpp
tinylang/lib/Parser/: Parser.cpp
tinylang/lib/Sema/: Scope.cpp  Sema.cpp
tinylang/tests/: CMakeLists.txt  codegen.cpp  lexer.cpp  main.cpp  parser.cpp  token.cpp
tinylang/tools/driver/: tinylang.cpp
